--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ body{
     background: aliceblue;
     cursor: pointer;
     transition-duration: 0.5s;
+    margin-bottom:2.5rem;
 }
 .active{
     width:50px;
