--- a/src/components/ContactPage/ContactPage.scss
+++ b/src/components/ContactPage/ContactPage.scss
@@ -65,14 +65,6 @@
     width:100%;
     text-align: center;
 }
-.contact-title{
-    width:100%;
-    color:white;
-    text-align: center;
-    font-weight: 600;
-    font-family: Poppins, sans-serif;
-    font-size: 2.5vw;
-}
 .contact-error{
     padding: 0 2vw;
     color: transparent;
@@ -113,7 +105,7 @@
 .contact-input-message{
     font-size: 1rem;
     min-height: auto;
-    max-height: 275px;
+    max-height: 200px;
     max-width: 100%;
     min-width: 75%;
     border:none;
@@ -149,4 +141,121 @@
 }
 .contact-icons:hover{
     opacity: .5;
+}
+.contact-title-text{
+    font-size: 8rem;
+    line-height: 1;
+    letter-spacing: 0.1em;
+    margin-bottom: 1.6rem;
+    font-family: Poppins, sans-serif;
+    font-weight: 500;
+    text-shadow: 0 10px 30px rgb(2 11 22 / 50%);
+}
+.contact-title{
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    z-index: 200;
+    height:4.5rem;
+    font-size: 1.5em;
+}
+@media screen and (min-width: 1025px) and (max-width: 1199px) {
+    .contact-left{
+        width:0;
+    }
+    .contact-right{
+        width:100%;
+        border-radius:5px;
+    }
+    .contact-error{
+        margin-left:12.5%;
+    }
+    .contact-inputs{
+        margin-left:10%;
+        width:80%;
+    }
+    .contact-title{
+        font-size: 3.5vw;
+    }
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .contact-left{
+        width:0;
+    }
+    .contact-right{
+        width:100%;
+        border-radius:5px;
+    }
+    .contact-error{
+        margin-left:12.5%;
+    }
+    .contact-inputs{
+        margin-left:10%;
+        width:80%;
+    }
+    .contact-title{
+        font-size: 3.5vw;
+    }
+    .title-text{
+        font-size: 3rem;
+        margin-left:7.5%;
+    }
+}
+.contact-title-main{
+    color: #fff;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    -webkit-transform: translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
+    z-index: 200;
+    margin-left: 11%;
+}
+@media screen and (min-width: 0px) and (max-width: 768px) {
+    .contact-left{
+        width:0;
+    }
+    .contact-right{
+        width:90%;
+        height:110%;
+        border-radius:5px;
+        transform: translateY(22.5%);
+    }
+    .contact-text{
+        font-size: 3rem;
+    }
+    .contact-title-main{
+        display: none;
+    }
+    .contact-wrapper{
+        height:65%;
+        width:75%;
+        box-shadow: none;
+        transform: translateY(-25%);
+    }
+    .break{
+        display: none;
+    }
+    .contact-title{
+        text-align: center;
+        font-size: 1.2em;
+    }
+    .contact-error{
+        padding: 0 4vw;
+    }
+    .contact-input{
+        font-size: 0.9rem;
+    }
+    .contact-input-message{
+        padding: 1rem 5%;
+        font-size: 0.9rem;
+    }
+    .contact-button{
+        font-size: 0.9rem;
+        margin:0.8rem 0 0.8rem 0;
+        padding-right:0.8rem;
+        padding-left:0.8rem;
+    }
 }
