--- a/src/App.scss
+++ b/src/App.scss
@@ -62,3 +62,23 @@ body{
         margin:0.7rem;
     }
 }
+
+.intro {
+    background: linear-gradient(to top left,#0f0c29, #24243e);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2000;
+}
+
+.intro-text {
+    color: #FFF;
+    font-family: Poppins, sans-serif;
+    font-size: 3rem;
+    z-index: 2000;
+}
