--- a/src/components/ContactPage/ContactPage.scss
+++ b/src/components/ContactPage/ContactPage.scss
@@ -43,6 +43,9 @@
     width:50%;
     height:100%;
 }
+textarea{
+    resize:none;
+}
 .contact-right{
     border-bottom-right-radius: 5px;
     border-top-right-radius:5px;
